objects/FieloEE__SegmentDomain__c.object
<CustomObject>
    <description>Segments that can access a certain object, like a banner, a reward or a content feed.</description>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Segment Domains</relationshipLabel>
        <relationshipName>SegmentDomains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Banner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner</label>
        <referenceTo>FieloEE__Banner__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__News__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>News</label>
        <referenceTo>FieloEE__News__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>FieloEE__Promotion__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Segment__c</fullName>
        <label>Segment</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipLabel>Segment Domains</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>FieloSVY__Survey__c</referenceTo>
        <relationshipLabel>Segment Domains</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Segment Domain</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>SegmentDomain Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Domain</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>